--- a/.eslintrc
+++ b/.eslintrc
@@ -1,75 +1,3 @@
 {
-  "globals": {
-    "JSX": true
-  },
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "settings": {
-    "import/resolver": {
-      "alias": {
-        "map": [
-          [
-            "utils",
-            "./src/utils"
-          ],
-          [
-            "constants",
-            "./src/constants"
-          ],
-          [
-            "components",
-            "./src/components"
-          ],
-          [
-            "hooks",
-            "./src/hooks"
-          ]
-        ],
-        "extensions": [".js", ".mjs", ".jsx", ".ts", ".tsx"]
-      },
-      "node": {
-        "extensions": [".js", ".mjs", ".jsx", ".ts", ".tsx"]
-      }
-    }
-  },
-  "extends": [
-    "airbnb-base",
-    "plugin:prettier/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "rules": {
-    "no-unused-vars": "off",
-    "no-param-reassign": "off",
-    "import/prefer-default-export": "off",
-    "import/extensions": [
-      "error",
-      "ignorePackages",
-      {
-        "js": "never",
-        "mjs": "never",
-        "jsx": "never",
-        "ts": "never",
-        "tsx": "never"
-      }
-    ],
-    "prettier/prettier": [
-      1,
-      {
-        "trailingComma": "es5",
-        "singleQuote": true,
-        "printWidth": 100,
-        "arrowParens": "avoid",
-        "endOfLine": "auto"
-      }
-    ]
-  }
+  "extends": "@andreasnilssondev"
 }
